fixed width issue and prevent horiztonal scrollbar

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 
 body {
   background-color: #03191e;
+  width: 100%;
+  overflow-x: hidden;
 }
 #memes {
   display: grid;
